@@ -1,7 +1,6 @@
 package com.carrot.market.product.application;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Slice;
@@ -10,14 +9,18 @@ import org.springframework.transaction.annotation.Transactional;
 
 import com.carrot.market.member.infrastructure.WishListRepository;
 import com.carrot.market.product.application.dto.response.CategoryDto;
-import com.carrot.market.product.application.dto.response.MainPageServiceDto;
+import com.carrot.market.product.application.dto.response.DetailPageServiceDto;
 import com.carrot.market.product.application.dto.response.ProductDetailResponseDto;
 import com.carrot.market.product.application.dto.response.ProductSellerDetaillDto;
+import com.carrot.market.product.application.dto.response.WishListDetailDto;
+import com.carrot.market.product.domain.Category;
+import com.carrot.market.product.domain.SellingStatus;
 import com.carrot.market.product.infrastructure.CategoryRepository;
 import com.carrot.market.product.infrastructure.ProductImageRepository;
 import com.carrot.market.product.infrastructure.ProductRepository;
 import com.carrot.market.product.infrastructure.QueryProductRepository;
-import com.carrot.market.product.infrastructure.dto.MainPageSliceDto;
+import com.carrot.market.product.infrastructure.dto.request.DetailPageSliceRequestDto;
+import com.carrot.market.product.infrastructure.dto.response.DetailPageSliceResponseDto;
 
 import lombok.RequiredArgsConstructor;
 
@@ -32,30 +35,41 @@ public class ProductService {
 	private final ProductImageRepository productImageRepository;
 	private final WishListRepository wishListRepository;
 
-	public MainPageServiceDto getMainPage(Long locationId, Long categoryId, Long next, int size) {
-		Slice<MainPageSliceDto> byLocationIdAndCategoryId = queryProductRepository.findByLocationIdAndCategoryId(
-			locationId, categoryId, next, size);
-		List<MainPageSliceDto> products = byLocationIdAndCategoryId.getContent();
+	public DetailPageServiceDto getMainPage(Long locationId, Long categoryId, Long next, int size) {
+
+		DetailPageSliceRequestDto deTailPageSliceRequestDto = DetailPageSliceRequestDto.builder()
+			.locationId(locationId)
+			.categoryId(categoryId)
+			.nextProductId(next)
+			.pageSize(size)
+			.build();
+
+		Slice<DetailPageSliceResponseDto> byDetailPageSliceRequestDto = queryProductRepository.findByDetailPageSliceRequestDto(
+			deTailPageSliceRequestDto);
+
+		List<DetailPageSliceResponseDto> products = byDetailPageSliceRequestDto.getContent();
 		Long contentNextId = getContentNextId(products, size);
 		products = removeLastIfProductsSizeOverPageSize(products, size);
-		return new MainPageServiceDto(products, contentNextId);
+
+		return new DetailPageServiceDto(products, contentNextId);
 	}
 
 	/*
 	 * 	페이징 할 때 size + 1만큼 요소를 조회하고 다음 페이지가 있다면 마지막 요소를 제거한다.
 	 * */
-	private List<MainPageSliceDto> removeLastIfProductsSizeOverPageSize(List<MainPageSliceDto> content, int size) {
+	private List<DetailPageSliceResponseDto> removeLastIfProductsSizeOverPageSize(
+		List<DetailPageSliceResponseDto> content, int size) {
 		if (content.size() == size + 1) {
 			return popLast(content);
 		}
 		return content;
 	}
 
-	private List<MainPageSliceDto> popLast(List<MainPageSliceDto> content) {
+	private List<DetailPageSliceResponseDto> popLast(List<DetailPageSliceResponseDto> content) {
 		return content.subList(0, content.size() - 1);
 	}
 
-	private Long getContentNextId(List<MainPageSliceDto> content, int pageSize) {
+	private Long getContentNextId(List<DetailPageSliceResponseDto> content, int pageSize) {
 		Long nextContentId = null;
 		if (content != null && content.size() == pageSize + 1) {
 			nextContentId = content.get(content.size() - 1).getId();
@@ -68,7 +82,7 @@ public class ProductService {
 		return categoryRepository.findAll()
 			.stream()
 			.map(CategoryDto::from)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	public ProductDetailResponseDto getProduct(Long memberId, Long productId) {
@@ -84,4 +98,40 @@ public class ProductService {
 		Boolean isLiked = wishListRepository.existsWishListByMemberIdAndProductId(memberId, productId);
 		return ProductDetailResponseDto.from(imageUrls, productDetailDto, isLiked);
 	}
+
+	public DetailPageServiceDto getSellingProducts(String status, Long memberId, Long next, int size) {
+		DetailPageSliceRequestDto build = DetailPageSliceRequestDto.builder()
+			.status(SellingStatus.fromString(status))
+			.sellerId(memberId)
+			.nextProductId(next)
+			.pageSize(size)
+			.build();
+
+		Slice<DetailPageSliceResponseDto> byDetailPageSliceRequestDto = queryProductRepository.findByMyDetailPageSliceRequestDto(
+			build);
+
+		List<DetailPageSliceResponseDto> products = byDetailPageSliceRequestDto.getContent();
+		Long contentNextId = getContentNextId(products, size);
+		products = removeLastIfProductsSizeOverPageSize(products, size);
+
+		return new DetailPageServiceDto(products, contentNextId);
+	}
+
+	public WishListDetailDto getWishList(Long categoryId, Long memberId, Long next, int size) {
+		List<Category> categoryByMemberId = productRepository.findCategoryByMemberId(memberId);
+		DetailPageSliceRequestDto build = DetailPageSliceRequestDto.builder()
+			.wishMemberId(memberId)
+			.categoryId(categoryId)
+			.nextProductId(next)
+			.pageSize(size)
+			.build();
+		Slice<DetailPageSliceResponseDto> byMyDetailPageSliceRequestDto = queryProductRepository.findByMyDetailPageSliceRequestDto(
+			build);
+		List<DetailPageSliceResponseDto> products = byMyDetailPageSliceRequestDto.getContent();
+		Long contentNextId = getContentNextId(products, size);
+		products = removeLastIfProductsSizeOverPageSize(products, size);
+
+		return WishListDetailDto.from(categoryByMemberId, products, contentNextId);
+	}
+
 }
